# webank-hospital

./: .gitignore  INTRO.md  README.md
backend/: package.json  tsconfig.json
backend/src/: ca.ts  deploy.ts  index.ts
backend/src/config/: index.ts
backend/src/contract-sdk/: config.ts  index.ts  network.ts  transactionObject.ts  web3sync.ts
contract/: MedicalRecord.sol
contract/.liquid/abi_gen/: main.rs
contract/src/: lib.rs
contracts/: Makefile  ca.sol  meta.sol
contracts/record/src/: lib.rs
contracts/trace/: Cargo.toml
contracts/trace/.liquid/abi_gen/: main.rs
contracts/trace/src/: lib.rs
doctor/: index.html  package.json  vite.config.js
doctor/src/: index.jsx
doctor/src/utils/: aes.js  codec.js  ipfs.js  pre.js  random.js
frontend/: doctor.html  index.html  jsconfig.json  package-lock.json  package.json  patient.html  pharmacy.html  supplyChain.html  tailwind.config.js  vite.config.js
frontend/common/api/: index.js  v1.js  v2.js
frontend/common/constants/: index.js
frontend/common/hooks/: useAsyncEffect.js
frontend/common/utils/: aes.js  bls.js  codec.js  hmac.js  ipfs.js  kdf.js  pre.js  random.js  sha.js
frontend/doctor/: App.jsx  index.jsx
frontend/doctor/api/: index.js
frontend/doctor/config/: index.js
frontend/doctor/constants/: index.js
frontend/doctor/stores/: idb.js
frontend/doctor/utils/: ipfs.js
frontend/lib/: README.md  dlv.js  level-js.js  levelup.js  mortice.js  randombytes.js
frontend/lib/ipfs-utils/: env.js  fetch.js  path-join.js
frontend/lib/readable-stream/: _stream_readable.js  _stream_transform.js  _stream_writable.js  errors.js  index.js
frontend/patient/: index.jsx
frontend/patient/api/: index.js
frontend/patient/components/: Card.jsx  Header.jsx  RecordCard.jsx  Section.jsx
frontend/patient/config/: category.json  index.js  physicalExam.json
frontend/patient/routes/: index.jsx
frontend/pharmacy/: index.jsx
frontend/src/: index.jsx
frontend/supplyChain/: index.jsx
rust/: Cargo.toml
rust/src/: air.rs  lib.rs  rescue.rs  utils.rs
(+76 files in other folders)
