[package]
name = "rescue"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
winterfell = { version = "0.2.0", default-features = false }
base64 = "0.13.0"
wasm-bindgen = "0.2"
