[package]
name = "contract"
version = "0.1.0"
edition = "2018"

[dependencies]
scale = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive", "full"] }

liquid_lang = { git = "https://github.com/winderica/liquid", package = "liquid_lang", default-features = false, features = ["contract", "solidity-compatible"] }
liquid_primitives = { git = "https://github.com/winderica/liquid", package = "liquid_primitives", default-features = false }
liquid_prelude = { git = "https://github.com/winderica/liquid", package = "liquid_prelude", default-features = false }
liquid_abi_codec = { git = "https://github.com/winderica/liquid", package = "liquid_abi_codec", default-features = false }
liquid_macro = { git = "https://github.com/winderica/liquid", package = "liquid_macro", default-features = false }
liquid_abi_gen = { git = "https://github.com/winderica/liquid", package = "liquid_abi_gen", default-features = false, optional = true }
liquid_ty_mapping = { git = "https://github.com/winderica/liquid", package = "liquid_ty_mapping", default-features = false }

[lib]
crate-type = [
    "cdylib",
    "rlib",
]

[features]
default = ["std"]
std = [
    "liquid_lang/std",
    "scale/std",
    "liquid_primitives/std",
    "liquid_prelude/std",
    "liquid_abi_codec/std",
    "liquid_macro/std",
    "liquid_ty_mapping/std",
]
liquid-abi-gen = [
    "std",
    "liquid_abi_gen",
    "liquid_lang/contract-abi-gen",
]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
overflow-checks = true

[workspace]
members = [
    ".liquid/abi_gen",
]
exclude = [
    ".liquid",
]
